# nanoupnp

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  build.ps1  upnp.c  upnp.h
.github/workflows/: ci.yml
cmake/: nanoupnpConfig.cmake.in
example/: map_port.c
packaging/vcpkg/: portfile.cmake  usage  vcpkg.json
test/: test_live.c  test_upnp.c
